syntax = "proto3";
import "google/protobuf/struct.proto";

package pixiu.api.v1;

// Filter core struct, filter is extend by user
message Filter {
	string name = 1;
	oneof config {
		Config yaml = 2;
		Config json = 3;
		google.protobuf.Struct struct = 4;
	}
}

message Config {
	string content = 1;
}

// FilterChain filter chain
message FilterChain {
	pixiu.api.v1.FilterChainMatch filter_chain_match = 1;
	repeated pixiu.api.v1.Filter filters = 2;
}

// FilterChainMatch
message FilterChainMatch {
	repeated string domains = 1;
}

// HTTPFilter http filter
message HTTPFilter {
	string name = 1;
}